# ethos

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  README.md  TOOLS_DETAIL_ASSESSMENT.md  TOOLS_PRIORITY_FOCUS.md  clean.ipynb  docker-compose.yml  ethos.py  header.txt  langgraph.json  main.py  pyproject.toml  server.py  start-dev.bat  start-dev.sh
.claude/: settings.local.json
api/: __init__.py  app.py  deps.py
api/models/: __init__.py  chat.py
api/routes/: __init__.py  files.py  terminals.py  v1.py
docs/: BACKEND_STRUCTURE.md  DEPLOY_RENDER_VERCEL.md  DOCKER_SETUP.md  OPENWEBUI_ETHOS_ARCHITECTURE.md  SUBAGENT_ROADMAP.md  bug.md  permission-ui-test-cases.md
ethos/: config.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  constants.ts  i18n.ts  main.tsx  styles.css  types.ts
plans/20260413-1200-provider-profiles/: phase-01-data-model.md  phase-02-backend-api.md  phase-03-frontend-profiles-ui.md  phase-04-model-selector.md  plan.md  road-map-security.md
scripts/: verify_mcp_tools.py
src/: __init__.py  config.py  graph.py  prompts.py  subagents.py
src/ai/: README.md  __init__.py
src/api/: __init__.py  app.py  deps.py
src/app/: __init__.py  bootstrap.py  dependencies.py  router.py
src/backends/: __init__.py  daytona.py  local.py  open_terminal.py  protocol.py  sandbox.py
src/logger/: __init__.py  config.py
src/middleware/: __init__.py  _utils.py  memory.py  skills.py  todos.py
src/tools/: __init__.py  execute.py
tests/: conftest.py  test_abuse_controls.py  test_chat_permission_events.py  test_daytona_backend.py  test_daytona_manager.py  test_file_security.py  test_local_backend_filesystem.py  test_open_terminal_backend.py  test_permission_evaluator.py  test_permission_resume_grants.py  test_permission_system_integration.py  test_subagents.py  test_terminal_security.py  test_tool_input_formatting.py  test_tool_streaming.py  test_v1_route_helpers.py  test_v1_task_endpoints.py
tests/agents/: test_ethos_agent_factory.py
tests/permissions/: test_evaluator.py  test_filesystem_policy.py  test_rules.py  test_shell_policy.py
tests/tools/: test_interaction.py  test_mcp_tools.py  test_orchestration.py  test_session.py  test_shell_tools.py  test_store.py  test_task_tools.py  (+2 more)
(+238 files in other folders)
