[project]
name = "ethos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-community",
    "tavily-python",
    "python-dotenv",
    "pyyaml",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "daytona>=0.161.0",
]

[project.optional-dependencies]
daytona = [
    "daytona",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "nbformat>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["ethos"]
